
- The snapshot option for creating a new patchbay definition from current
  actual connections now takes client and port names as regular expressions
  and smart enough when regarding more than two contiguous decimal digits :)

- Patchbay socket list view ordering is now properly preserved; socket
  dialog gets plug list handling ehancements; active patchbay gets reloaded
  when commited and saved to file.
  
- Server literal command-line is now saved into local configuration file
  (~/.jackdrc) for convenience of future auto-start client applications.

  
0.2.4  2004-02-01  Exclusive patchbay sockets.

- Patchbay definitions may now be configured with exclusive sockets;
  this way, only one defined connection is allowed as soon as it's available,
  being all others immediatelly disconnected whenever attempted.

- On the connections view, current connected client ports are now slightly
  highlighted (blue) whenever a client or port is selected on the opposite
  column (as suggested by Lawrie Abbott).

- Connections and patchbay drag and drop feature is now bilateral; you can
  now drag and drop an item from right to left to establish the connection.


0.2.3a 2004-01-19  Time format combo-box tooltip fix.

- A qt-designer copy-paste leftover has been fixed; sloppy boy I am ;)


0.2.3  2004-01-19  Tenths, hundredths, milliseconds, whatever.

- Custom time format setup for all elapsed times, allowing the display
  of tenths, hundredths or even milliseconds instead of just hundredths
  of second for transport time code.


0.2.2   2004-01-16  Hundredths are back.

- Transport time is now shown with hundredths of second (hh:mm:ss.dd),
  as it was once before but not constant zero.

- Client start delay now configurable on setup; this may be of help for
  slow machines or unusual long server driver startups (e.g. portaudio).

- Client-only mode restart has been fixed.

- Messages color retouching.

- Popup menus memory leak fixed.


0.2.1   2003-12-29  The fix of fixes.
