@@ -99,6 +99,7 @@ public:
     QString sDisplayFont1;
     QString sDisplayFont2;
     bool    bQueryClose;
+    bool    bKeepOnTop;
 
     // Defaults...
     QString sPatchbayPath;
